--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -311,20 +311,6 @@ input:focus {
   text-align: center;
 }
 
-/* .square__event__form {
-  position: absolute;
-  width: 65dvw;
-  height: 65dvw;
-  top: 50%;
-  left: 0;
-  transform: translate(-50%, -50%) rotate(45deg);
-  background-color: rgba(120, 114, 230, 0.3);
-  border-radius: 35px;
-  filter: blur(10px);
-  z-index: -100;
-} */
-
-
 .event__form {
   display: flex;
   flex-direction: column;
@@ -332,24 +318,35 @@ input:focus {
   justify-content: center;
 }
 
+.content__input{
+  color: var(--secondary);
+}
 
 .create__event__form__input {
   display: flex;
   flex-direction: column;
   width: 75%;
   margin: 0.5rem 0;
-  color: var(--secondary);
+  color: var(--black);
 }
 
 .create__event__form__select{
-  display: grid;
-  flex-direction: column;
-  width:100px;
-  margin: 0.5rem 0;
-  color: var(--primary);
+   width: 100%; 
+    margin: 0.5rem 0;
+    color: var(--primary);
+    background-color: transparent; 
+    border: 1px solid var(--black);
+    border-radius: 10px;
+    padding: 0.5rem;
+    outline: none; 
+    cursor: pointer; 
 }
 
-#type_event{
+.sections__form__create{
+  color: var(--secondary);
+}
+
+#event_type{
   display: flex;
   flex-direction: column;
   width: 75%;
@@ -371,6 +368,122 @@ input:focus {
   background-color: var(--black);
   box-shadow: 0 5px 15px var(--primary);
 }
+
+
+
+
+
+
+  /* Estilos para el modal de filtro */
+  .Modal__filter {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(218, 216, 216, 0.7);
+    z-index: 1;
+    overflow-y: scroll;
+}
+
+.filter__header {
+    max-width: 300px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 10px;
+    background-color: #fff;
+    display: flex;
+    justify-content: space-between; /* Alinear el contenido a los extremos */
+    align-items: center; /* Centrar verticalmente */
+}
+
+/* Estilos para el contenido del modal */
+.modal-content {
+    background-color: var(--white);
+    width: 28%;
+    margin: 100px auto;
+    padding: 20px;
+    border-radius: 10px;
+    max-height: 80%; 
+   overflow-y: auto;
+}
+
+.scroll-container {
+  overflow-y: auto; 
+  max-height: calc(100% - 20px); 
+}
+
+.checkbox-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);  
+  gap: 20px;
+}
+
+.button-filter-bar{
+    padding: 10px;
+    background: none;
+    border: 1px solid var(--primary);
+    border-radius: 10px;
+    box-shadow: 0 ;
+    margin-top: 20%;
+}
+
+.button-filter-bar:hover{
+  border: 2px solid var(--primary);
+}
+
+.filter__img{
+    margin-right: 8px;
+}
+
+.button_places {
+    display: flex;
+    justify-content: space-around;
+    padding-bottom:10px ;
+}
+
+ .filter_elements{
+  border-bottom: 1px solid #ccc; 
+  padding-bottom: 10px; 
+ }
+
+ 
+
+/* Estilo para el botón de cerrar */
+.exit__filter{
+    text-align:left;
+    outline: none;
+    border: 55px solid;
+    padding: 0%;
+    border-width: 0px;
+    width: 23px;
+    height: 25px;
+    padding-top: 2px;
+   background: none;
+}
+
+/* img lugares  */
+.img_places_button{
+    border-radius: 5px;
+    height: 90px;
+    width: 100px;
+    background: none; 
+    border: 1px;
+    border: 1px solid #ccc;
+    background: none;
+    padding: 10px; 
+}
+
+.img_places_button:hover {
+   border: 1px solid var(--black);
+}
+
+.img_places{
+    width: 50px;
+}
+
+
 
 
 
